--- a/Style/style.css
+++ b/Style/style.css
@@ -52,3 +52,19 @@ h5 {
 .item {
   padding: 15px;
 }
+
+.summaexample {
+  display: flex;
+  margin:auto;
+  width: 88%;
+  padding-bottom: 35px;
+}
+
+@media (max-width: 991px) {
+  .summaexample {
+    float: none;
+    margin-left: unset;
+    margin-right: unset;
+    max-width: 100%;
+  }
+}
